versioned_docs/version-1.1.0/docs/README.md
---
sidebar_position: 1
---

# Introduction

Welcome to the official documentation for `js-recon`, a powerful tool for JavaScript reconnaissance. This documentation provides a comprehensive overview of all available commands and their functionalities.

## Available commands

`js-recon` offers the following commands to help you analyze and extract valuable information from JavaScript files:

- **[Lazyload](./modules/lazyload.md):** Download all Lazy-Loaded JavaScript files from a target URL or a list of URLs.
- **[Endpoints](./modules/endpoints.md):** Extract client-side from JavaScript files.
- **[Strings](./modules/strings.md):** Extract strings, URLs, and secrets from JavaScript files.
- **[API Gateway](./modules/api-gateway.md):** Configure and manage Amazon Web Services API Gateway for IP rotation.
- **[Map](./modules/map.md):** Map and analyze functions within JavaScript files. For Next.JS, an [interactive mode](./modules/interactive_mode/next-js.md) is also available.
- **[Run](./modules/run.md):** Run essential modules automatically.

Select a command from the list preceding to view its detailed documentation, including all available options and practical examples.

## Example scenario

The document [here](./example-scenarios/next-js.md) demonstrates an example scenario of using JS Recon with a Next.JS app.
